--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "insanity",
+  "name": "ngCordovaBase",
   "version": "1.0.0",
-  "description": "insanity tracking app",
+  "description": "base install with modules for ngCordova",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +10,6 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-   "url": "https://github.com/AndySouthwick/insanityApp.git"
+   "url": "https://github.com/AndySouthwick/ngCordovaBase.git"
   }
 }
