--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-   "url": "https://github.com/AndySouthwick/insanityApp.git"
+    "url": "https://github.com/AndySouthwick/insanityApp.git"
+  },
+  "dependencies": {
+    "angular-route": "^1.6.1"
   }
 }
